[gd_scene load_steps=6 format=2]

[ext_resource path="res://Internal/Default/Themes/HeaderText.tres" type="Theme" id=1]
[ext_resource path="res://App/Extensions/CID_Extension/Scripts/HintToConsole.gd" type="Script" id=2]
[ext_resource path="res://Internal/Default/Fonts/RobotoMono/static/RobotoMono-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://App/Extensions/CID_Extension/Scripts/UI/IdPanel.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=7]
use_filter = true
font_data = ExtResource( 3 )

[node name="IdPanel" type="VBoxContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 369.0
margin_bottom = 205.0
script = ExtResource( 4 )

[node name="SourceLabels" type="HBoxContainer" parent="."]
margin_right = 362.0
margin_bottom = 22.0

[node name="Label" type="Label" parent="SourceLabels"]
margin_top = 2.0
margin_right = 322.0
margin_bottom = 20.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "ID Source:"

[node name="Help" type="Label" parent="SourceLabels"]
margin_left = 326.0
margin_right = 362.0
margin_bottom = 22.0
rect_min_size = Vector2( 36, 0 )
hint_tooltip = "ID Source is used by ini Writer to help you write RecordIDs correctly.

EditorID's e.g. BearCavePelt
FormID's e.g. 0x9e2af

There are 2 options to choose from:
1. Editor ID:
- Select this when you are using EditorIDs to locate the record you wish to modify.
- EditorIDs come from the editorID of the record displayed in the Creation Kit or xEdit.

2. Esm / Esp / Esl:
- Select this when you are using FormIDs that originate from esm's, esp's & esl's.
- Ini Writer can automatically apply the shortening rules required by mods.
- You do NOT need to write the tilde symbol '~'"
mouse_filter = 1
custom_fonts/font = SubResource( 7 )
text = "?"
align = 1
script = ExtResource( 2 )

[node name="SourceSelect" type="OptionButton" parent="."]
margin_top = 26.0
margin_right = 362.0
margin_bottom = 46.0
text = "Editor ID"
items = [ "Editor ID", null, false, 0, null, "esp / esm / esl", null, false, 1, null ]
selected = 0

[node name="Spacer" type="Control" parent="."]
margin_top = 50.0
margin_right = 362.0
margin_bottom = 50.0

[node name="IdLabels" type="HBoxContainer" parent="."]
margin_top = 54.0
margin_right = 362.0
margin_bottom = 76.0

[node name="Label" type="Label" parent="IdLabels"]
margin_top = 2.0
margin_right = 322.0
margin_bottom = 20.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "Form / Editor ID:"

[node name="Help" type="Label" parent="IdLabels"]
margin_left = 326.0
margin_right = 362.0
margin_bottom = 22.0
rect_min_size = Vector2( 36, 0 )
hint_tooltip = "RecordID (Form/Editor ID) is the unique identifier of the record you want to distribute. 
Two approaches are supported:

1. EditorID:
- EditorID is the form editorID of the record displayed in CK or xEdit. 
- EditorIDs can change when the mod is merged or converted into esl.
- Raw Window Appearance: Keyword = Crimson Armor Outfit|Armor|Filters here|etc... <-- \"Crimson Armor Outfit\" is the EditorID

2. FormID and the source plugin:
- FormID is the formID of the distributable record as it appears in the CreationKit (e.g. FE051801)
﻿- Source plugin is the name of the mod containing the record (MyMod.esp/esl/esm).
- Raw Window Appearance: e.g. 0xD65~CrimsonTwilightArmor.esp <-- The id shortening rules have been applied as required."
mouse_filter = 1
custom_fonts/font = SubResource( 7 )
text = "?"
align = 1
script = ExtResource( 2 )
__meta__ = {
"_editor_description_": "RecordID (Form/Editor ID) is the unique identifier of the record you want to distribute. 
Two approaches are supported:

1. EditorID:
- EditorID is the form editorID of the record displayed in CK or xEdit. 
- FormIDs can change when the mod is merged or converted into esl.
- No source esp is required as the extension can automatically locate the appropriate record.
- Raw Window Appearance: Keyword = Crimson Armor Outfit|Armor|Filters here|etc... <-- \"Crimson Armor Outfit\" is the EditorID

2. FormID and the source plugin:
- FormID is the formID of the distributable record as it appears in the CreationKit (e.g. FE051801)
﻿- Source plugin is the name of the mod containing the record (MyMod.esp/esl/esm).
- Raw Window Appearance: e.g. 0xD65~CrimsonTwilightArmor.esp <-- The id is shortened because all leading zeroes ('0') have been removed as required."
}

[node name="CheckBox" type="CheckBox" parent="."]
margin_top = 80.0
margin_right = 362.0
margin_bottom = 104.0
text = "Auto Shorten"

[node name="IdEdit" type="LineEdit" parent="."]
margin_top = 108.0
margin_right = 362.0
margin_bottom = 134.0
clear_button_enabled = true
placeholder_text = "e.g. FE051801"

[node name="Spacer2" type="Control" parent="."]
margin_top = 138.0
margin_right = 362.0
margin_bottom = 138.0

[node name="SourceContainer" type="VBoxContainer" parent="."]
margin_top = 142.0
margin_right = 362.0
margin_bottom = 194.0

[node name="IdLabels" type="HBoxContainer" parent="SourceContainer"]
margin_right = 362.0
margin_bottom = 22.0

[node name="Label" type="Label" parent="SourceContainer/IdLabels"]
margin_top = 2.0
margin_right = 322.0
margin_bottom = 20.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "Source Plugin:"

[node name="Help" type="Label" parent="SourceContainer/IdLabels"]
margin_left = 326.0
margin_right = 362.0
margin_bottom = 22.0
rect_min_size = Vector2( 36, 0 )
hint_tooltip = "What to write:
- Leave out the tilde symbol '~'
- You must include the extension! e.g. (MyMod.esm or MyPlugin.esp)"
mouse_filter = 1
custom_fonts/font = SubResource( 7 )
text = "?"
align = 1
script = ExtResource( 2 )

[node name="SourceEdit" type="LineEdit" parent="SourceContainer"]
margin_top = 26.0
margin_right = 362.0
margin_bottom = 52.0
clear_button_enabled = true
placeholder_text = "e.g. MyMod.esp"

[node name="Spacer4" type="Control" parent="."]
margin_top = 198.0
margin_right = 362.0
margin_bottom = 198.0

[connection signal="item_selected" from="SourceSelect" to="." method="_on_SourceSelect_item_selected"]
